hidden overflow timeline fix @chrome

--- a/src/style.css
+++ b/src/style.css
@@ -71,6 +71,7 @@ input, textarea {
 }
 
 .subtitles {
+    overflow: hidden;
     grid-area: subtitles;
     background:#333;
     color:white;
